--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,11 @@ android {
     namespace "de.appgewaltig.disk_space"
     compileSdkVersion 34
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -37,6 +42,12 @@ android {
     }
     lintOptions {
         disable 'InvalidPackage'
+    }
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "17"
     }
 }
 
